--- a/assets/pages/index.html
+++ b/assets/pages/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../modul/scroll-to-top.css">
     <link rel="stylesheet" href="../modul/tops-module.css">
     <link rel="stylesheet" href="../modul/discussions-module.css">
+    <link rel="stylesheet" href="../modul/works-module.css">
     <meta name="description"
         content="Киноклуб Одиссея - место для настоящих ценителей кино. Обсуждения фильмов, топ-рейтинги и архив встреч.">
     <meta name="keywords" content="кино, киноклуб, фильмы, обсуждение, рейтинги, Одиссея">
@@ -153,61 +154,61 @@
     </section>
 
     <!-- Топ фильмов -->
- <section id="top-films" class="movies">
-    <h2 class="section__title fade-in">Наши топы</h2>
+    <section id="top-films" class="movies">
+        <h2 class="section__title fade-in">Наши топы</h2>
 
-    <!-- Кнопки управления -->
-    <div class="tops-controls fade-in delay-1">
-        <button class="toggle-tops-btn active" data-limit="3" aria-pressed="true">Топ-3</button>
-        <button class="toggle-tops-btn" data-limit="10" aria-pressed="false">Топ-10</button>
-    </div>
+        <!-- Кнопки управления -->
+        <div class="tops-controls fade-in delay-1">
+            <button class="toggle-tops-btn active" data-limit="3" aria-pressed="true">Топ-3</button>
+            <button class="toggle-tops-btn" data-limit="10" aria-pressed="false">Топ-10</button>
+        </div>
 
-    <div class="tops-grid">
-        <!-- Топ лучших фильмов -->
-        <div class="top-section fade-in delay-1">
-            <h3 class="top-title">🏆 Топ лучших фильмов</h3>
-            <div id="top-best-films" class="top-list" aria-live="polite">
-                <div class="loading-message">
-                    <div class="spinner" aria-hidden="true"></div>
-                    Загрузка лучших фильмов...
+        <div class="tops-grid">
+            <!-- Топ лучших фильмов -->
+            <div class="top-section fade-in delay-1">
+                <h3 class="top-title">🏆 Топ лучших фильмов</h3>
+                <div id="top-best-films" class="top-list" aria-live="polite">
+                    <div class="loading-message">
+                        <div class="spinner" aria-hidden="true"></div>
+                        Загрузка лучших фильмов...
+                    </div>
+                </div>
+            </div>
+
+            <!-- Топ худших фильмов -->
+            <div class="top-section fade-in delay-2">
+                <h3 class="top-title">💩 Топ худших фильмов</h3>
+                <div id="top-worst-films" class="top-list" aria-live="polite">
+                    <div class="loading-message">
+                        <div class="spinner" aria-hidden="true"></div>
+                        Загрузка худших фильмов...
+                    </div>
+                </div>
+            </div>
+
+            <!-- Популярные жанры -->
+            <div class="top-section fade-in delay-3">
+                <h3 class="top-title">🎭 Популярные жанры</h3>
+                <div id="top-genres" class="top-list" aria-live="polite">
+                    <div class="loading-message">
+                        <div class="spinner" aria-hidden="true"></div>
+                        Загрузка жанров...
+                    </div>
+                </div>
+            </div>
+
+            <!-- Популярные режиссеры -->
+            <div class="top-section fade-in delay-4">
+                <h3 class="top-title">🎬 Популярные режиссеры</h3>
+                <div id="top-directors" class="top-list" aria-live="polite">
+                    <div class="loading-message">
+                        <div class="spinner" aria-hidden="true"></div>
+                        Загрузка режиссеров...
+                    </div>
                 </div>
             </div>
         </div>
-
-        <!-- Топ худших фильмов -->
-        <div class="top-section fade-in delay-2">
-            <h3 class="top-title">💩 Топ худших фильмов</h3>
-            <div id="top-worst-films" class="top-list" aria-live="polite">
-                <div class="loading-message">
-                    <div class="spinner" aria-hidden="true"></div>
-                    Загрузка худших фильмов...
-                </div>
-            </div>
-        </div>
-
-        <!-- Популярные жанры -->
-        <div class="top-section fade-in delay-3">
-            <h3 class="top-title">🎭 Популярные жанры</h3>
-            <div id="top-genres" class="top-list" aria-live="polite">
-                <div class="loading-message">
-                    <div class="spinner" aria-hidden="true"></div>
-                    Загрузка жанров...
-                </div>
-            </div>
-        </div>
-
-        <!-- Популярные режиссеры -->
-        <div class="top-section fade-in delay-4">
-            <h3 class="top-title">🎬 Популярные режиссеры</h3>
-            <div id="top-directors" class="top-list" aria-live="polite">
-                <div class="loading-message">
-                    <div class="spinner" aria-hidden="true"></div>
-                    Загрузка режиссеров...
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+    </section>
 
     <!-- Контакты -->
     <section id="contacts" class="contacts">
@@ -236,17 +237,17 @@
         </div>
     </section>
 
-<!-- Секция архива фильмов -->
-<section id="film-archive" class="film-archive">
-    <h2 class="section__title fade-in">Архив наших работ</h2>
-    <div id="works-container" class="video-posters-grid fade-in delay-1" aria-live="polite">
-        <!-- Работы будут здесь -->
-    </div>
-    <h2 class="section__title fade-in delay-2">История обсуждений</h2>
-    <div id="films-container" class="film-grid fade-in delay-3" aria-live="polite">
-        <!-- Фильмы будут здесь -->
-    </div>
-</section>
+    <!-- Секция архива фильмов -->
+    <section id="film-archive" class="film-archive">
+        <h2 class="section__title fade-in">Архив наших работ</h2>
+        <div id="works-container" class="video-posters-grid fade-in delay-1" aria-live="polite">
+            <!-- Работы будут здесь -->
+        </div>
+        <h2 class="section__title fade-in delay-2">История обсуждений</h2>
+        <div id="films-container" class="film-grid fade-in delay-3" aria-live="polite">
+            <!-- Фильмы будут здесь -->
+        </div>
+    </section>
 
     <!-- Футер -->
     <div id="footer-container"></div>
@@ -259,6 +260,7 @@
     <script src="../modul/scroll-to-top.js"></script>
     <script src="../modul/tops-module.js"></script>
     <script src="../modul/discussions-module.js"></script>
+    <script src="../modul/works-module.js"></script>
 </body>
 
 </html>
