--- a/assets/pages/index.html
+++ b/assets/pages/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="../modul/discussions-module.css">
     <link rel="stylesheet" href="../modul/works-module.css">
     <link rel="stylesheet" href="../modul/next-meeting-module.css">
+    <link rel="stylesheet" href="../modul/map-module.css">
     <meta name="description"
         content="Киноклуб Одиссея - место для настоящих ценителей кино. Обсуждения фильмов, топ-рейтинги и архив встреч.">
     <meta name="keywords" content="кино, киноклуб, фильмы, обсуждение, рейтинги, Одиссея">
@@ -263,6 +264,7 @@
     <script src="../modul/discussions-module.js"></script>
     <script src="../modul/works-module.js"></script>
     <script src="../modul/next-meeting-module.js"></script>
+    <script src="../modul/map-module.js"></script>
 </body>
 
 </html>
