fix style script

--- a/assets/pages/Interactive-game.html
+++ b/assets/pages/Interactive-game.html
@@ -109,7 +109,7 @@
     </section>
 
     <!-- Как играть -->
-    <section id="how-to-play" class="movies">
+    <section id="how-to-play" class="about">
         <h2 class="section__title fade-in">Как играть</h2>
 
         <div class="faq-grid fade-in delay-1">
@@ -220,41 +220,6 @@
         </div>
     </section>
 
-    <!-- Контакты для поддержки -->
-    <section id="support" class="contacts">
-        <h2 class="section__title">Поддержка</h2>
-        <div class="contacts__grid">
-            <div class="contact-card">
-                <div class="contact-card__icon" aria-hidden="true">📱</div>
-                <h3 class="contact-card__title">Телефон</h3>
-                <a href="tel:+79787975939" class="contact-card__link">+7 (978) 7975 939</a>
-                <p>Стас (разработчик)</p>
-            </div>
-            <div class="contact-card">
-                <div class="contact-card__icon" aria-hidden="true">📱</div>
-                <h3 class="contact-card__title">Телефон</h3>
-                <a href="tel:+79787363212" class="contact-card__link">+7 (978) 7363 212</a>
-                <p>Настенька (организатор)</p>
-            </div>
-            <div class="contact-card">
-                <div class="contact-card__icon" aria-hidden="true">🤖</div>
-                <h3 class="contact-card__title">Telegram</h3>
-                <a href="https://t.me/GeekLS" target="_blank" rel="noopener noreferrer"
-                    class="contact-card__link">@GeekLS</a>
-                <p>Разработчик бота</p>
-            </div>
-        </div>
-
-        <div class="text-center" style="margin-top: var(--space-xl);">
-            <p style="font-size: var(--text-lg); margin-bottom: var(--space-md);">
-                <strong>Если что-то пошло не так или вы заблудились — не стесняйтесь звонить!</strong>
-            </p>
-            <p style="font-style: italic; color: var(--gray);">
-                "Жизнь — это как коробка шоколадных конфет... а этот квест — как самая вкусная из них!"
-            </p>
-        </div>
-    </section>
-
     <!-- Призы -->
     <section id="prizes" class="about">
         <h2 class="section__title fade-in">Система призов</h2>
@@ -304,6 +269,38 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <!-- Контакты для поддержки -->
+    <section id="support" class="contacts">
+        <h2 class="section__title">Поддержка</h2>
+        <div class="contacts__grid">
+            <div class="contact-card">
+                <div class="contact-card__icon" aria-hidden="true">📱</div>
+                <h3 class="contact-card__title">Телефон</h3>
+                <a href="tel:+79787975939" class="contact-card__link">+7 (978) 7975 939</a>
+                <p>Стас (разработчик)</p>
+            </div>
+            <div class="contact-card">
+                <div class="contact-card__icon" aria-hidden="true">📱</div>
+                <h3 class="contact-card__title">Телефон</h3>
+                <a href="tel:+79787363212" class="contact-card__link">+7 (978) 7363 212</a>
+                <p>Настенька (организатор)</p>
+            </div>
+            <div class="contact-card">
+                <div class="contact-card__icon" aria-hidden="true">🤖</div>
+                <h3 class="contact-card__title">Telegram</h3>
+                <a href="https://t.me/GeekLS" target="_blank" rel="noopener noreferrer"
+                    class="contact-card__link">@GeekLS</a>
+                <p>Разработчик бота</p>
+            </div>
+        </div>
+
+            <div class="about__quote fade-in delay-2">
+                <div class="quote-icon" aria-hidden="true">❝</div>
+                <p>"Жизнь — это как коробка шоколадных конфет... а этот квест — как самая вкусная из них!</p>
+                <div class="quote-author">Если что-то пошло не так или вы заблудились — не стесняйтесь звонить!</div>
+            </div>
 
         <div id="to-game" class="text-center" style="margin-top: var(--space-xl);">
             <a href="https://t.me/Odyssey_Cinema_Club_bot" target="_blank" rel="noopener noreferrer"
@@ -311,7 +308,6 @@
                 🎮 Начать квест в Telegram-боте
             </a>
         </div>
-        <dev>. </dev>
     </section>
 
     <!-- Футер -->
