--- a/assets/pages/crocodile-game.html
+++ b/assets/pages/crocodile-game.html
@@ -110,7 +110,7 @@
     </section>
 
     <!-- Начало игры -->
-    <section id="game-start" class="crocodile-game">
+    <section id="game-start" class="about">
         <div class="container">
             <h2 class="section__title fade-in">Начнем игру!</h2>
 
@@ -198,7 +198,6 @@
                     </div>
                 </div>
             </div>
-
             <!-- История игры -->
             <div class="game-history fade-in delay-3">
                 <h3>Уже показано:</h3>
@@ -210,7 +209,7 @@
     </section>
 
     <!-- Советы -->
-    <section class="crocodile-tips">
+    <section class="about crocodile-tips">
         <div class="container">
             <h2 class="section__title fade-in">Советы для игроков</h2>
 
@@ -248,11 +247,21 @@
                     </ul>
                 </div>
             </div>
+
+            <!-- Цитата в стиле index.html -->
+            <div class="about__quote fade-in delay-2">
+                <div class="quote-icon" aria-hidden="true">❝</div>
+                <p>"В Крокодиле побеждает не тот, кто лучше показывает, а тот, чья команда лучше понимает!"</p>
+                <div class="quote-author">— Мудрый игрок</div>
+            </div>
         </div>
     </section>
 
     <!-- Футер -->
     <div id="footer-container"></div>
+
+    <!-- Кнопка прокрутки наверх -->
+    <button class="scroll-to-top" aria-label="Наверх">↑</button>
 
     <!-- Подключаем скрипты -->
     <script src="../js/crocodile-game.js"></script>
