--- a/assets/pages/quiz.html
+++ b/assets/pages/quiz.html
@@ -39,6 +39,7 @@
         <h2 class="section__title fade-in">Правила квиза</h2>
         <div class="about__content">
             <div class="faq-grid fade-in delay-1">
+
                 <!-- Колонка 1 -->
                 <div class="faq-column">
                     <div class="faq-item">
@@ -46,7 +47,8 @@
                             <span class="faq-icon" aria-hidden="true">⏱️</span>
                             <h3>Время</h3>
                         </div>
-                        <p class="faq-answer">На каждый вопрос дается ограниченное время. Думай быстро, но внимательно!</p>
+                        <p class="faq-answer">На каждый вопрос дается ограниченное время. Думай быстро, но внимательно!
+                        </p>
                     </div>
                 </div>
 
@@ -57,7 +59,8 @@
                             <span class="faq-icon" aria-hidden="true">🏆</span>
                             <h3>Рейтинг</h3>
                         </div>
-                        <p class="faq-answer">Зарабатывай очки за правильные ответы и попади в таблицу лидеров киноклуба</p>
+                        <p class="faq-answer">Зарабатывай очки за правильные ответы и попади в таблицу лидеров киноклуба
+                        </p>
                     </div>
                 </div>
 
@@ -92,30 +95,36 @@
                             Квиз состоит из 15 вопросов о фильмах, которые мы обсуждали в киноклубе.
                             Постарайтесь ответить правильно на как можно больше вопросов!
                         </p>
-                        
+
                         <div class="faq-grid" style="margin-bottom: var(--space-xl);">
                             <div class="faq-column">
                                 <div class="faq-item text-center">
-                                    <div class="stat-number" style="font-size: var(--text-xxxl); color: var(--secondary); margin-bottom: var(--space-sm);">15</div>
+                                    <div class="stat-number"
+                                        style="font-size: var(--text-xxxl); color: var(--secondary); margin-bottom: var(--space-sm);">
+                                        15</div>
                                     <div class="stat-label" style="font-weight: 600;">вопросов</div>
                                 </div>
                             </div>
                             <div class="faq-column">
                                 <div class="faq-item text-center">
-                                    <div class="stat-number" style="font-size: var(--text-xxxl); color: var(--secondary); margin-bottom: var(--space-sm);">3</div>
+                                    <div class="stat-number"
+                                        style="font-size: var(--text-xxxl); color: var(--secondary); margin-bottom: var(--space-sm);">
+                                        3</div>
                                     <div class="stat-label" style="font-weight: 600;">уровня сложности</div>
                                 </div>
                             </div>
                             <div class="faq-column">
                                 <div class="faq-item text-center">
-                                    <div class="stat-number" style="font-size: var(--text-xxxl); color: var(--secondary); margin-bottom: var(--space-sm);">2</div>
+                                    <div class="stat-number"
+                                        style="font-size: var(--text-xxxl); color: var(--secondary); margin-bottom: var(--space-sm);">
+                                        2</div>
                                     <div class="stat-label" style="font-weight: 600;">подсказки</div>
                                 </div>
                             </div>
                         </div>
-                        
-                        <button class="btn btn--primary start-quiz-btn" id="start-quiz-btn" 
-                                style="font-size: var(--text-lg); padding: var(--space-lg) var(--space-xl);">
+
+                        <button class="btn btn--primary start-quiz-btn" id="start-quiz-btn"
+                            style="font-size: var(--text-lg); padding: var(--space-lg) var(--space-xl);">
                             Начать квиз
                         </button>
                     </div>
