--- a/assets/pages/setup-guide.html
+++ b/assets/pages/setup-guide.html
@@ -318,7 +318,8 @@
                                     <li>Перейдите в настройки приложения</li>
                                     <li>Выберите раздел "Start Parameter"</li>
                                     <li>Нажмите кнопку "Setup" и введите адрес: <code>lampa.mx</code> или
-                                        <code>msx.noname.h1n.ru</code></li>
+                                        <code>msx.noname.h1n.ru</code>
+                                    </li>
                                     <li>Подтвердите действие нажатием на галочку и выбором "Yes"</li>
                                     <li>После этих действий установка будет завершена и появятся дополнительные
                                         приложения</li>
