--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=assets/pages/index.html">
+    <meta http-equiv="refresh" content="0; url=https://ulysses-club.github.io/odissea/assets/pages/index.html">
+    <link rel="canonical" href="https://ulysses-club.github.io/odissea/assets/pages/index.html">
     <title>Перенаправление на Киноклуб "ОДИССЕЯ"</title>
     <script>
-        window.location.href = "assets/pages/index.html";
+        // Автоматическое перенаправление на главную страницу
+        window.location.href = "https://ulysses-club.github.io/odissea/assets/pages/index.html";
     </script>
 </head>
+
 <body>
-    <p>Если перенаправление не произошло автоматически, пожалуйста, <a href="assets/pages/index.html">перейдите по этой ссылке</a>.</p>
+    <noscript>
+        <p>Для автоматического перенаправления требуется JavaScript. Пожалуйста, включите JavaScript в настройках
+            браузера.</p>
+    </noscript>
+    <p>Если перенаправление не произошло автоматически, пожалуйста, <a
+            href="https://ulysses-club.github.io/odissea/assets/pages/index.html">перейдите по этой ссылке на главную
+            страницу Киноклуба "ОДИССЕЯ"</a>.</p>
 </body>
+
 </html>
