fix tach button index logo

--- a/assets/pages/randomizer.html
+++ b/assets/pages/randomizer.html
@@ -20,7 +20,7 @@
 <body>
     <!-- Шапка -->
     <header class="header">
-        <a href="../index.html" class="logo" aria-label="Киноклуб Одиссея - главная страница">
+        <a href="index.html" class="logo" aria-label="Киноклуб Одиссея - главная страница">
             <div class="logo__icon"></div>
             ОДИССЕЯ
         </a>
