fix next meeting

--- a/assets/pages/index.html
+++ b/assets/pages/index.html
@@ -40,11 +40,14 @@
 
     <!-- Предстоящая встреча -->
     <section id="next-meeting" class="next-meeting">
-        <h2 class="section__title fade-in">Ближайшая встреча</h2>
-        <div id="next-meeting-container" class="next-meeting__container fade-in delay-1" aria-live="polite">
-            <div class="loading-message">
-                <div class="spinner" aria-hidden="true"></div>
-                Загрузка информации о встрече...
+        <div class="container">
+            <h2 class="section-title">Ближайшая встреча</h2>
+            <div id="next-meeting-container">
+                <!-- Сюда будет загружена информация о встрече -->
+                <div class="loading-message">
+                    <div class="spinner"></div>
+                    Загрузка информации о встрече...
+                </div>
             </div>
         </div>
     </section>
