--- a/assets/pages/Interactive-game.html
+++ b/assets/pages/Interactive-game.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../modul/footer-module.css">
     <link rel="stylesheet" href="../modul/seasons-effects.css">
     <link rel="stylesheet" href="../modul/scroll-to-top.css">
+    <link rel="stylesheet" href="../modul/weather-module.css">
     <meta name="description"
         content="Киноквест Odissea - интерактивный городской квест для любителей кино. Находи коды, отвечай на вопросы, становись легендой!">
     <meta name="keywords" content="киноквест, геоквест, Одиссея, киноклуб, игра, локации, коды">
@@ -319,6 +320,7 @@
     <script src="../modul/footer-module.js"></script>
     <script src="../modul/seasons-effects.js"></script>
     <script src="../modul/scroll-to-top.js"></script>
+    <script src="../modul/weather-module.js"></script>
 </body>
 
 </html>
