--- a/assets/pages/crocodile-game.html
+++ b/assets/pages/crocodile-game.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../modul/footer-module.css">
     <link rel="stylesheet" href="../modul/seasons-effects.css">
     <link rel="stylesheet" href="../modul/scroll-to-top.css">
+    <link rel="stylesheet" href="../modul/weather-module.css">
     <meta name="description"
         content="Игра в Крокодила - веселая командная игра для вечеринок. Показывай, рисуй или объясняй слова без слов!">
     <meta name="keywords" content="крокодил, игра, слова, команды, вечеринка, киноклуб">
@@ -271,6 +272,7 @@
     <script src="../modul/footer-module.js"></script>
     <script src="../modul/seasons-effects.js"></script>
     <script src="../modul/scroll-to-top.js"></script>
+    <script src="../modul/weather-module.js"></script>
 </body>
 
 </html>
