--- a/assets/pages/randomizer.html
+++ b/assets/pages/randomizer.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../modul/footer-module.css">
     <link rel="stylesheet" href="../modul/seasons-effects.css">
     <link rel="stylesheet" href="../modul/scroll-to-top.css">
+    <link rel="stylesheet" href="../modul/weather-module.css">
     <meta name="description"
         content="Рандомайзер для выбора случайных чисел и имен. Идеально для жеребьевки и случайных выборов!">
     <meta name="keywords" content="рандомайзер, случайный выбор, жеребьевка, числа, имена, киноклуб">
@@ -242,6 +243,7 @@
     <script src="../modul/footer-module.js"></script>
     <script src="../modul/seasons-effects.js"></script>
     <script src="../modul/scroll-to-top.js"></script>
+    <script src="../modul/weather-module.js"></script>
 </body>
 
 </html>
