--- a/assets/pages/setup-guide.html
+++ b/assets/pages/setup-guide.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../modul/footer-module.css">
     <link rel="stylesheet" href="../modul/seasons-effects.css">
     <link rel="stylesheet" href="../modul/scroll-to-top.css">
+    <link rel="stylesheet" href="../modul/weather-module.css">
     <meta name="description"
         content="Инструкции по настройке телевизоров, компьютеров и телефонов для оптимального просмотра фильмов">
     <meta name="keywords" content="настройка, телевизор, компьютер, телефон, просмотр фильмов, калибровка">
@@ -1066,6 +1067,7 @@
     <script src="../modul/footer-module.js"></script>
     <script src="../modul/seasons-effects.js"></script>
     <script src="../modul/scroll-to-top.js"></script>
+    <script src="../modul/weather-module.js"></script>
 </body>
 
 </html>
