--- a/assets/pages/stanislav.html
+++ b/assets/pages/stanislav.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../modul/footer-module.css">
     <link rel="stylesheet" href="../modul/seasons-effects.css">
     <link rel="stylesheet" href="../modul/scroll-to-top.css">
+    <link rel="stylesheet" href="../modul/weather-module.css">
     <meta name="description" content="Станислав Лабенский - Middle QA Engineer с опытом в ручном и автоматизированном тестировании">
     <meta name="keywords" content="QA Engineer, тестирование, автоматизация, JavaScript, Playwright">
     <style>
@@ -985,6 +986,7 @@
     <script src="../modul/footer-module.js"></script>
     <script src="../modul/seasons-effects.js"></script>
     <script src="../modul/scroll-to-top.js"></script>
+    <script src="../modul/weather-module.js"></script>
     <script>
         // Функция для открытия модального окна с изображением
         function openModal(imageSrc) {
