--- a/assets/pages/quiz.html
+++ b/assets/pages/quiz.html
@@ -32,7 +32,15 @@
         <button class="mobile-menu-btn" aria-label="Меню" aria-expanded="false">☰</button>
     </header>
 
+    <!-- Переключатель версий -->
+    <div class="quiz-version-switcher">
+        <button class="btn btn--outline" onclick="window.location.href='quiz-broadcast.html'">
+            🎬 Режим трансляции
+        </button>
+    </div>
+
     <!-- Герой секция -->
+    <div class="hero-container"></div>
     <div class="hero-container"></div>
 
     <!-- Правила квиза -->
@@ -60,7 +68,7 @@
                             <span class="faq-icon" aria-hidden="true">🏆</span>
                             <h3>Рейтинг</h3>
                         </div>
-                        <p class="faq-answer">Зарабатывай очки за правильные ответы и попади в таблицу лидеров киноклуба
+                        <p class="faq-answer">Зарабатывай очки за правильные ответы и попади в таблицу лидеров киноклуба.
                         </p>
                     </div>
                 </div>
@@ -72,7 +80,47 @@
                             <span class="faq-icon" aria-hidden="true">💡</span>
                             <h3>Подсказки</h3>
                         </div>
-                        <p class="faq-answer">У тебя есть ограниченное количество подсказок. Используй их мудро!</p>
+                        <p class="faq-answer">У тебя есть ограниченное количество подсказок. Используй их мудро! Они заключены в картинках и скрытом смысле вопроса.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="faq-grid fade-in delay-1">
+
+                <!-- Колонка 4 -->
+                <div class="faq-column">
+                    <div class="faq-item">
+                        <div class="faq-question">
+                            <span class="faq-icon" aria-hidden="true">⛔</span>
+                            <h3>Зарет гаджетов</h3>
+                        </div>
+                        <p class="faq-answer">Запрещается использовать умные устройства для поиска ответа! Нарушение будет караться штрафом в виде списания баллов.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Колонка 5 -->
+                <div class="faq-column">
+                    <div class="faq-item">
+                        <div class="faq-question">
+                            <span class="faq-icon" aria-hidden="true">⌛</span>
+                            <h3>Время сдачи ответов</h3>
+                        </div>
+                        <p class="faq-answer">Сдайте листы с ответами в течение отведённого времени до того, как будут объявлены правильные ответы.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Колонка 6 -->
+                <div class="faq-column">
+                    <div class="faq-item">
+                        <div class="faq-question">
+                            <span class="faq-icon" aria-hidden="true">🤓</span>
+                            <h3>Поведение</h3>
+                        </div>
+                        <p class="faq-answer">Ведите себя достойно! Не давайте окружающим повода чувствовать себя некомфортно. 
+                        </p>
                     </div>
                 </div>
             </div>
@@ -80,6 +128,9 @@
             <div class="rules-actions text-center fade-in delay-2">
                 <a href="#quiz-start" class="btn btn--primary" style="margin-right: var(--space-md);">Начать квиз</a>
                 <button class="btn btn--outline" id="view-leaders">Таблица лидеров</button>
+            </div>
+            <div class="rules-actions text-center fade-in delay-2">
+
             </div>
         </div>
     </section>
@@ -93,7 +144,7 @@
                     <div class="welcome-content text-center">
                         <h2 class="section__title">Готовы проверить свои знания?</h2>
                         <p class="faq-answer" style="max-width: 600px; margin: 0 auto var(--space-xl);">
-                            Квиз состоит из 15 вопросов о фильмах, которые мы обсуждали в киноклубе.
+                            Квиз состоит из 7 туров о фильмах, которые возможно мы обсуждали в киноклубе.
                             Постарайтесь ответить правильно на как можно больше вопросов!
                         </p>
 
@@ -102,24 +153,24 @@
                                 <div class="faq-item text-center">
                                     <div class="stat-number"
                                         style="font-size: var(--text-xxxl); color: var(--secondary); margin-bottom: var(--space-sm);">
-                                        15</div>
-                                    <div class="stat-label" style="font-weight: 600;">вопросов</div>
+                                        7</div>
+                                    <div class="stat-label" style="font-weight: 600;">Туров</div>
                                 </div>
                             </div>
                             <div class="faq-column">
                                 <div class="faq-item text-center">
                                     <div class="stat-number"
                                         style="font-size: var(--text-xxxl); color: var(--secondary); margin-bottom: var(--space-sm);">
-                                        3</div>
-                                    <div class="stat-label" style="font-weight: 600;">уровня сложности</div>
+                                        60</div>
+                                    <div class="stat-label" style="font-weight: 600;">Всего примерно вопросов</div>
                                 </div>
                             </div>
                             <div class="faq-column">
                                 <div class="faq-item text-center">
                                     <div class="stat-number"
                                         style="font-size: var(--text-xxxl); color: var(--secondary); margin-bottom: var(--space-sm);">
-                                        2</div>
-                                    <div class="stat-label" style="font-weight: 600;">подсказки</div>
+                                        60</div>
+                                    <div class="stat-label" style="font-weight: 600;">Время на ответ</div>
                                 </div>
                             </div>
                         </div>
@@ -140,6 +191,56 @@
                 <div class="quiz-results" id="quiz-results" style="display: none;">
                     <!-- Результаты будут добавляться динамически -->
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="quiz-rules" class="about">
+        <h2 class="section__title fade-in">Рекомендации</h2>
+        <div class="about__content">
+            <div class="faq-grid fade-in delay-1">
+
+                <!-- Колонка 1 -->
+                <div class="faq-column">
+                    <div class="faq-item">
+                        <div class="faq-question">
+                            <span class="faq-icon" aria-hidden="true">🎞️</span>
+                            <h3>Экран</h3>
+                        </div>
+                        <p class="faq-answer">Внимательно изучайте задание и вопрос! В них могут быть важные подсказки
+                            или критерии оценки.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Колонка 2 -->
+                <div class="faq-column">
+                    <div class="faq-item">
+                        <div class="faq-question">
+                            <span class="faq-icon" aria-hidden="true">👥</span>
+                            <h3>Команда</h3>
+                        </div>
+                        <p class="faq-answer">Играйте в команде! Это поможет провести время ярче и глубже погрузиться в
+                            игру.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- Колонка 3 -->
+                <div class="faq-column">
+                    <div class="faq-item">
+                        <div class="faq-question">
+                            <span class="faq-icon" aria-hidden="true">📓</span>
+                            <h3>Заметки</h3>
+                        </div>
+                        <p class="faq-answer">Записывайте свои идеи и мнения! Так можно лучше направить мысль в нужное
+                            русло.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="rules-actions text-center fade-in delay-2">
             </div>
         </div>
     </section>
