--- a/assets/pages/santa-game.html
+++ b/assets/pages/santa-game.html
@@ -272,7 +272,7 @@
                 <div class="rule-card">
                     <div class="rule-icon">⏰</div>
                     <h3>Соблюдай сроки</h3>
-                    <p>Вручи подарок до установленной даты. Не заставляй своего Санту ждать!</p>
+                    <p>Вручи подарок в установленный срок. Не заставляй бедолагу ждать!</p>
                 </div>
                 <div class="rule-card">
                     <div class="rule-icon">💝</div>
