--- a/assets/pages/index.html
+++ b/assets/pages/index.html
@@ -3,8 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
     <title>Киноклуб "ОДИССЕЯ"</title>
+
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../modul/navigation.css">
     <link rel="stylesheet" href="../modul/hero-section.css">
@@ -17,6 +19,7 @@
     <link rel="stylesheet" href="../modul/next-meeting-module.css">
     <link rel="stylesheet" href="../modul/map-module.css">
     <link rel="stylesheet" href="../modul/weather-module.css">
+
     <meta name="description"
         content="Киноклуб Одиссея - место для настоящих ценителей кино. Обсуждения фильмов, топ-рейтинги и архив встреч.">
     <meta name="keywords" content="кино, киноклуб, фильмы, обсуждение, рейтинги, Одиссея">
