--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <meta http-equiv="refresh" content="0; url=https://ulysses-club.github.io/odissea/assets/pages/index.html">
     <link rel="canonical" href="https://ulysses-club.github.io/odissea/assets/pages/index.html">
-    <title>Перенаправление на Киноклуб "ОДИССЕЯ"</title>
+    <title>Киноклуб "ОДИССЕЯ"</title>
     <script>
         // Автоматическое перенаправление на главную страницу
         window.location.href = "https://ulysses-club.github.io/odissea/assets/pages/index.html";
