--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <meta http-equiv="refresh" content="0; url=https://ulysses-club.github.io/odissea/assets/pages/index.html">
     <link rel="canonical" href="https://ulysses-club.github.io/odissea/assets/pages/index.html">
     <title>Киноклуб "ОДИССЕЯ"</title>
