--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
+    <!-- Метатег для проверки в Яндексе (опционально) -->
+    <meta name="yandex-verification" content="4ceb9bd49900f0a9" />
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-    <meta http-equiv="refresh" content="0; url=https://ulysses-club.github.io/odissea/assets/pages/index.html">
-    <link rel="canonical" href="https://ulysses-club.github.io/odissea/assets/pages/index.html">
+    <!-- Исправленный путь (убраны папки assets/) -->
+    <meta http-equiv="refresh" content="0; url=assets/pages/index.html">
+    <link rel="canonical" href="https://ulysses-club.github.io/odissea/pages/index.html">
     <title>Киноклуб "ОДИССЕЯ"</title>
     <script>
         // Автоматическое перенаправление на главную страницу
-        window.location.href = "https://ulysses-club.github.io/odissea/assets/pages/index.html";
+        window.location.href = "assets/pages/index.html";
     </script>
 </head>
 
@@ -19,8 +22,7 @@
             браузера.</p>
     </noscript>
     <p>Если перенаправление не произошло автоматически, пожалуйста, <a
-            href="https://ulysses-club.github.io/odissea/assets/pages/index.html">перейдите по этой ссылке на главную
-            страницу Киноклуба "ОДИССЕЯ"</a>.</p>
+            href="assets/pages/index.html">перейдите по этой ссылке на главную страницу Киноклуба "ОДИССЕЯ"</a>.</p>
 </body>
 
 </html>
