--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </script>
 </head>
 
-<body>Verification: 4ceb9bd49900f0a9
+<body>
     <noscript>
         <p>Для автоматического перенаправления требуется JavaScript. Пожалуйста, включите JavaScript в настройках
             браузера.</p>
