--- a/assets/pages/santa-game.html
+++ b/assets/pages/santa-game.html
@@ -34,7 +34,7 @@
     </header>
 
     <!-- Герой секция -->
-    <div class="hero-container" data-hero-theme="santa"></div>
+    <div class="hero-container"></div>
 
     <!-- О игре -->
     <section id="about" class="about">
